fixed the wallpaper issue and fixed the nav appearing before clicking on mobile

--- a/styles.css
+++ b/styles.css
@@ -5,18 +5,7 @@ html,body{
     height: 100%;
     scroll-behavior: smooth;
     font-family: "Montserrat", sans-serif;
-    background-image: url("Content/HSG.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center; 
-    
-}
-.d {
     background-color: black;
-    background-image: url("Content/HSG.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center; 
 }
 
 *{
@@ -24,6 +13,7 @@ html,body{
     margin: 0;
     padding: 0;
 }
+
 :root{
     --white: #fff;
     --brand-500: #10b981;
@@ -75,32 +65,7 @@ header {
     align-items: center;
 }
 
-.topnav {
-    position: fixed;
-    top: 0px;
-    background-color: rgba(0, 0, 0, 0.74);
-    z-index: 999;
-    transition: 0.5s;
-    width: 100%;
-    height: 100%;
-    max-height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    
-}
-.topnav a {
 
-    font-family: "Montserrat",sans-serif;
-    font-weight: 500;
-    color: aliceblue;
-    text-decoration: none;
-    text-align: center;
-    margin-bottom: 15px;
-    margin-top: 15px;
-
-}
 .bcolor{
 
     font-family: "Montserrat",sans-serif;
@@ -111,8 +76,9 @@ header {
     margin-bottom: 15px;
     margin-top: 15px;
 }
-.topnav a:hover{
-    color: aqua;
+
+.topnav {
+    display: none;
 }
 
 @media (max-width: 500px) {
@@ -123,6 +89,34 @@ header {
         color: aqua;
         height: 50px;
         width: 50px;
+    }
+    .topnav {
+        position: fixed;
+        top: 0px;
+        background-color: rgba(0, 0, 0, 0.74);
+        z-index: 999;
+        transition: 0.5s;
+        width: 100%;
+        height: 100%;
+        max-height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;  
+    }
+    .topnav a {
+    
+        font-family: "Montserrat",sans-serif;
+        font-weight: 500;
+        color: aliceblue;
+        text-decoration: none;
+        text-align: center;
+        margin-bottom: 15px;
+        margin-top: 15px;
+    
+    }
+    .topnav a:hover{
+        color: aqua;
     }
 }  
 .nav__links li{
